# notebooks

./: README.md  alembic.ini  backslash-scanner.ipynb  backslash-scanner.py  learn-prefect.py  learning-cmd.py  learning-extraction.ipynb  learning-extraction.py  learning-prefect.ipynb  learning-prefect.py  learning-pydantic-ai.ipynb  learning-pydantic-ai.py  learning-scapy.ipynb  learning-scapy.py  learning-sqlalchemy.ipynb  learning-sqlalchemy.py  learning-zed.py  learning_playwright.ipynb  learning_playwright.py  models.py  pydantic_notes.ipynb  pydantic_notes.py  pyproject.toml  python_trick.ipynb  python_trick.py  schemas.py
config/: config.py  database.py  init_db.py
learning-fastmcp/: client.py  server.py
learning-nix/first-steps/: shell.nix
learning-strawberry/: schema.py
migrations/: env.py
migrations/versions/: 2025_10_16_0102-a8774e465100_initial_migration.py  2025_10_24_2234-3764cf2a6992_initial_migrations.py  2025_10_26_1910-de63cc39ab31_initial_migration.py
mixins/: columns.py  commons.py  schemas.py
utils/: crud_util.py  custom_validators.py  image_qr.py  misc.py  user.py
