[project]
name = "notebooks"
version = "0.1.0"
description = "Collection of notebooks for learning new things"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cmd2>=2.5.3",
    "google-cloud-storage>=2.18.2",
    "inflect>=7.4.0",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "playwright>=1.48.0",
    "prompt-toolkit>=3.0.48",
    "pydantic>=2.9.2",
    "rich>=13.9.4",
    "sqlalchemy>=2.0.35",
    "ulid>=1.1",
]
